--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,11 @@
         android:id="@+id/txtEndereço"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="156dp"
+        android:layout_marginTop="104dp"
         android:text="Consultar Postagem de uma API"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,40 +23,42 @@
         android:id="@+id/btnConsultar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="28dp"
         android:backgroundTint="#0228D1"
         android:text="Consultar"
         android:textSize="16sp"
         android:textStyle="bold"
         app:cornerRadius="0dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtnumpostagem" />
 
-    <TextView
-        android:id="@+id/txtRETORNO"
-        android:layout_width="379dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:textAlignment="center"
-        android:textColor="#F80321"
-        android:textSize="24sp"
+    <Button
+        android:id="@+id/btnLimpartxt"
+        android:layout_width="109dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="28dp"
+        android:backgroundTint="#232424"
+        android:text="Limpar"
+        android:textSize="16sp"
         android:textStyle="bold"
+        app:cornerRadius="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/txtRETORNO"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.767"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnConsultar"
-        tools:text="ID da Postagem (Título)" />
+        app:layout_constraintTop_toBottomOf="@+id/edtnumpostagem"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/edtnumpostagem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="345dp"
+        android:layout_height="51dp"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:hint="Digite o ID da postagem"
-        android:inputType="number"
+        android:hint="Digite o nome do filme"
+        android:inputType="text"
         android:textAlignment="center"
         android:textColor="#061B8A"
         android:textSize="24sp"
@@ -69,13 +70,36 @@
 
     <ImageView
         android:id="@+id/imgPhoto"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="343dp"
+        android:layout_height="264dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/ic_launcher_background"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtRETORNO" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="402dp"
+        android:layout_height="84dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnConsultar">
+
+        <TextView
+            android:id="@+id/txtRETORNO"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:textAlignment="center"
+            android:textColor="#F80321"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            tools:text="ID da Postagem (Título)" />
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
